# rstsr-ffi

./: .gitignore  Cargo.toml  readme.md  util_dyload.py
.github/workflows/: clippy.yml
rstsr-aocl-ffi/: Cargo.toml  readme.md
rstsr-aocl-ffi/header/: 7zTypes.h  FLAME.h  LzmaDec.h  LzmaEnc.h  aoclAlgoOpt.h  aoclFds.h  aocl_compression.h  aoclsparse_version.h  blis.h  bzlib.h  cblas.h  lz4.h  lz4frame.h  lz4hc.h  rng.h  secrng.h  snappy-c.h  snappy-stubs-public.h  snappy.h  zconf.h  zlib.h  zstd.h
rstsr-aocl-ffi/scripts/: gen_blis.py  gen_flame.py
rstsr-aocl-ffi/src/: blis_types.rs  lib.rs
rstsr-aocl-ffi/src/blis/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-aocl-ffi/src/flame/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-aocl-ffi/src/lapack/: dyload_compatible.rs  dyload_struct.rs  ffi_base.rs  mod.rs
rstsr-aocl-ffi/src/lapacke/: dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-blis-ffi/: Cargo.toml  readme.md
rstsr-blis-ffi/header/: FLAME.h  blis.h
rstsr-blis-ffi/scripts/: gen_blis.py  gen_flame.py
rstsr-blis-ffi/src/: blis_types.rs  lib.rs
rstsr-blis-ffi/src/blis_x86_64/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-blis-ffi/src/flame/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-blis-ffi/src/lapack/: dyload_initializer.rs  ffi_extern.rs  mod.rs
rstsr-cblas-base/: Cargo.toml  readme.md
rstsr-cblas-base/src/: lib.rs
rstsr-kml-ffi/: Cargo.toml  readme.md
rstsr-kml-ffi/header/: conv.h  cv.h  kblas.h  kes.h  kes_defs.h  kes_macros.h  kfft-mpi.h  kfft.h  kipl.h  klapack.h  km.h  km_l9.h  kml_dss.h  kml_gcr_specific.h  kml_ilut.h  kml_scadss.h  kml_scaiss.h  kml_scasolver_defs.h  kml_service.h  kml_solver_defs.h  kml_struct_ilu.h  kscalapack.h  ksvml.h  kvml.h  mg.h  mg_status.h  mg_types.h
rstsr-kml-ffi/scripts/: gen_kblas.py  gen_service.py
rstsr-kml-ffi/src/: kml_types.rs  lib.rs
rstsr-kml-ffi/src/blas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-kml-ffi/src/kblas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-kml-ffi/src/lapack/: mod.rs
rstsr-kml-ffi/src/service/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-lapack-ffi/: Cargo.toml  readme.md
rstsr-lapack-ffi/scripts/: perform_bindgen.py
rstsr-lapack-ffi/src/: blas.rs  cblas.rs  lapack.rs  lapacke.rs  lapacke_utils.rs  lib.rs
rstsr-lapack-ffi/src/blas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-lapack-ffi/src/cblas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-lapack-ffi/src/lapack/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-lapack-ffi/src/lapacke/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-lapack-ffi/src/lapacke_utils/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-mkl-ffi/: Cargo.toml  readme.md
rstsr-mkl-ffi/header/: mkl_spblas.h  symbol_table.txt
rstsr-mkl-ffi/scripts/: gen_blas.py  gen_cblas.py  gen_lapack.py  gen_lapacke.py  gen_service.py  gen_types.py
rstsr-mkl-ffi/src/: lib.rs  mkl_types.rs
rstsr-mkl-ffi/src/blas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-mkl-ffi/src/cblas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-mkl-ffi/src/lapack/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-mkl-ffi/src/lapacke/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-mkl-ffi/src/service/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-openblas-ffi/: Cargo.toml  readme.md
rstsr-openblas-ffi/scripts/: bindgen.py  perform_bindgen.py
rstsr-openblas-ffi/src/: cblas.rs  f77blas.rs  lib.rs  threading.rs
rstsr-openblas-ffi/src/blas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-openblas-ffi/src/cblas/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
rstsr-openblas-ffi/src/ffi/: cblas.rs  lapacke.rs  mod.rs  openmp.rs
rstsr-openblas-ffi/src/lapack/: mod.rs
rstsr-openblas-ffi/src/lapacke/: dyload_compatible.rs  dyload_initializer.rs  mod.rs
