[workspace]
resolver = "2"
members = [
    "rstsr-cblas-base",
    "rstsr-lapack-ffi",
    "rstsr-openblas-ffi",
    "rstsr-mkl-ffi",
    "rstsr-blis-ffi",
]

[workspace.package]
edition = "2021"
description = "A collection of (yet another) math-related libraries FFI bindings"
repository = "https://github.com/RESTGroup/rstsr-ffi"
keywords = ["blas", "lapack", "ffi"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
libloading = { version = "0.8" }
half = { version = "2.6" }
num = { version = "0.4" }
rstsr-cblas-base = { version = "0.1", path = "./rstsr-cblas-base" }

[profile.dev]
opt-level = 0
debug = false
