[package]
name = "rstsr-blis-ffi"
version = "0.1.3"
description = "BLIS and FLAME FFI bindings"
readme = "readme.md"

edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-cblas-base = { workspace = true }
libloading = { workspace = true, optional = true }
half = { workspace = true }
num = { workspace = true }

[features]
default = ["lapack", "dynamic_loading", "x86_64"]

ilp64 = ["rstsr-cblas-base/ilp64"]
lp64_as_int = ["rstsr-cblas-base/lp64_as_int"]
dynamic_loading = ["dep:libloading"]

lapack = []
flame = []

x86_64 = []
