[package]
name = "rstsr-lapack-ffi"
version = "0.2.0"
description = "Netlib LAPACK FFI bindings"
readme = "readme.md"

edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
libloading = { workspace = true }

[features]
ilp64 = []
dynamic_loading = []
