[package]
name = "rstsr-lapack-ffi"
version = "0.2.0"
description = "Netlib LAPACK FFI bindings"
readme = "readme.md"

edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
libloading = { workspace = true }

[features]
default = ["blas", "cblas", "lapack", "dynamic_loading"]

ilp64 = []
dynamic_loading = []

blas = []
cblas = []
lapack = []
lapacke = []
lapacke_utils = []
