[package]
name = "rstsr-openblas-ffi"
version = "0.4.0"
description = "OpenBLAS FFI bindings"
readme = "readme.md"

edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-lapack-ffi = { workspace = true, features = ["cblas"] }
libloading = { workspace = true }

[features]
default = ["blas", "cblas", "lapack", "dynamic_loading"]

ilp64 = []
dynamic_loading = []

blas = []
cblas = []
lapack = []
lapacke = []

quad_precision = []
ex_precision = []
