[package]
name = "rstsr-openblas-ffi"
version = "0.4.3"
description = "OpenBLAS FFI bindings"
readme = "readme.md"

edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
rstsr-cblas-base = { workspace = true }
libloading = { workspace = true, optional = true }

[features]
default = ["blas", "cblas", "lapack", "dynamic_loading"]

ilp64 = ["rstsr-cblas-base/ilp64"]
lp64_as_int = ["rstsr-cblas-base/lp64_as_int"]
dynamic_loading = ["dep:libloading"]

blas = []
cblas = []
lapack = []
lapacke = []

quad_precision = []
ex_precision = []
